[package]
name = "ocrypt"
version = "0.0.0"
edition = "2021"
license = "ISC"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
repository = "https://ltheinrich.de/ocrypt"
description = "Experimental cryptography library"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
des = "0.8.1"

[[bench]]
name = "des_bm"
harness = false
